--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "firebase": "^9.15.0",
     "i18next": "^22.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
